WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284837
[iOS] [SelectionHonorsOverflowScrolling] Selection sometimes ignores clipping/occlusion after pinch-zooming
https://bugs.webkit.org/show_bug.cgi?id=284837
Summary
[iOS] [SelectionHonorsOverflowScrolling] Selection sometimes ignores clipping...
Wenson Hsieh
Reported
2024-12-17 13:02:06 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-17 13:02:16 PST
<
rdar://problem/141635283
>
Wenson Hsieh
Comment 2
2024-12-17 13:21:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38093
EWS
Comment 3
2024-12-17 17:00:50 PST
Committed
287977@main
(6d9f68eb11b0): <
https://commits.webkit.org/287977@main
> Reviewed commits have been landed. Closing PR #38093 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug