Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm
@@ -189,48 +189,50 @@ private:
 #if HAVE(UI_TEXT_SELECTION_DISPLAY_INTERACTION)
     RetainPtr displayInteraction = [self textSelectionDisplayInteraction];
     RetainPtr highlightView = [displayInteraction highlightView];
-    if ([highlightView superview] == newContainer)
-        return;
+    if ([highlightView superview] != newContainer) {
+        NSMutableSet<UIView *> *viewsBeforeInstallingInteraction = [NSMutableSet set];
+        for (UIView *subview in newContainer.subviews)
+            [viewsBeforeInstallingInteraction addObject:subview];
 
-    NSMutableSet<UIView *> *viewsBeforeInstallingInteraction = [NSMutableSet set];
-    for (UIView *subview in newContainer.subviews)
-        [viewsBeforeInstallingInteraction addObject:subview];
+        // Calling these delegate methods tells the display interaction to remove and reparent all internally
+        // managed views (e.g. selection highlight views, selection handles) in the new selection container.
+        [displayInteraction willMoveToView:_view];
+        [displayInteraction didMoveToView:_view];
 
-    // Calling these delegate methods tells the display interaction to remove and reparent all internally
-    // managed views (e.g. selection highlight views, selection handles) in the new selection container.
-    [displayInteraction willMoveToView:_view];
-    [displayInteraction didMoveToView:_view];
-
-    _managedTextSelectionViews = { };
-    for (UIView *subview in newContainer.subviews) {
-        if (![viewsBeforeInstallingInteraction containsObject:subview])
-            _managedTextSelectionViews.append(subview);
+        _managedTextSelectionViews = { };
+        for (UIView *subview in newContainer.subviews) {
+            if (![viewsBeforeInstallingInteraction containsObject:subview])
+                _managedTextSelectionViews.append(subview);
+        }
     }
 
     if (newContainer == _view)
         return;
 
-    RetainPtr<WKCompositingView> tileGridContainer;
+    RetainPtr subviews = [newContainer subviews];
+    __block std::optional<NSUInteger> indexAfterTileGridContainer;
     auto tileGridContainerName = WebCore::TileController::tileGridContainerLayerName();
-    for (UIView *view in newContainer.subviews) {
+    [subviews enumerateObjectsUsingBlock:^(UIView *view, NSUInteger index, BOOL* stop) {
         RetainPtr compositingView = dynamic_objc_cast<WKCompositingView>(view);
         if ([[compositingView layer].name isEqualToString:tileGridContainerName]) {
-            tileGridContainer = WTFMove(compositingView);
-            break;
+            indexAfterTileGridContainer = index + 1;
+            *stop = YES;
         }
-    }
+    }];
 
-    if (!tileGridContainer)
+    if (!indexAfterTileGridContainer)
         return;
 
-    auto reinsertAboveTileGridContainer = [&](UIView *view) {
-        if (newContainer == view.superview)
-            [newContainer insertSubview:view aboveSubview:tileGridContainer.get()];
-    };
+    if (*indexAfterTileGridContainer < [subviews count] && [subviews objectAtIndex:*indexAfterTileGridContainer] == highlightView)
+        return;
 
-    reinsertAboveTileGridContainer(highlightView.get());
-    reinsertAboveTileGridContainer([[[displayInteraction handleViews] firstObject] superview]);
-    reinsertAboveTileGridContainer([displayInteraction cursorView]);
+    // The first managed selection view in the array of subviews should be the highlight view.
+    // If there are any other views between the tile grid container and the highlight view,
+    // reposition the managed selection views above the tile grid container.
+    for (UIView *view in self.managedTextSelectionViews.reverseObjectEnumerator) {
+        if (newContainer == view.superview)
+            [newContainer insertSubview:view atIndex:*indexAfterTileGridContainer];
+    }
 #endif // HAVE(UI_TEXT_SELECTION_DISPLAY_INTERACTION)
 }
 
